--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "terraform/tfstate"]
-	path = terraform/tfstate
+[submodule "tfstate"]
+	path = tfstate
 	url = git@github.com:lucasscvvieira/homecluster-tfstate.git
